Call Class.getConstructor.newInstance instead of newInstance